Fix broken style in text-align: center environments

--- a/src/tree-node.scss
+++ b/src/tree-node.scss
@@ -2,6 +2,7 @@
     min-width: 100%;
     white-space: nowrap;
     position: relative;
+    text-align: left;
 }
 
 .nodeContent {
